--- a/HTML/blog.html
+++ b/HTML/blog.html
@@ -11,7 +11,7 @@
 <!-- 头部 -->
     <div id="header">
         <div id="logo">
-            <h1>风</h1>
+            <h1>THE WIND</h1>
             <h2>less is more</h2>
         </div>
         <div id="nav">
