--- a/HTML/webproject2.0.html
+++ b/HTML/webproject2.0.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>富婆直找—听说你不想努力了？</title>
+    <title>不想努力了</title>
     <link href="./css/font-awesome.css" rel="stylesheet" type="text/css"/>
     <link href="./css/font-awesome.min.css" rel="stylesheet" type="text/css"/>
     <link href="./css/projectStyle.css" rel="stylesheet" type="text/css"/>
@@ -13,24 +13,24 @@
     <!-- 导航栏 -->
 <div class="bar">
     <div class="logo">
-        富婆直找网
+        blank的官方网站
     </div>
 		<ul>
-			<li><a href="#home">首页</a></li>
-			<li><a href="#APP"><i class="fa fa-camera-retro"></i>APP</a></li>
-			<li><a href="#about"><span class="fa fa-camera-retro">关于</span></a></li>
-			<li><a href="#about">上传简历</a></li>
-			<li><a href="#about">我要找富婆</a></li>
-            <li><a href="#about">富婆生活</a></li>	
+			<li><a href="#home"><span class="fa  fa-rocket">首页</span></a></li>
+			<li><a href="#coding"><span class="fa fa-bug">编程</span></a></li>
+			<li><a href="#life"><span class="fa fa-camera-retro">生活</span></a></li>
+			<li><a href="#read"><span class="fa fa-check">读书</span></a></li>
+			<li><a href="#about"><span class="fa fa-paperclip">关于</span></a></li>	
      <div class="login">
         <ul>
-		<li><a href="#home">注册</a></li>
-		<li><a href="#APP">登录</a></li>	
+		<li><a href="#resgin"><span class="fa fa-child">注册</span></a></li>
+		<li><a href="#login"><span class="fa fa-flag">登录</span></a></li>	
         </ul>
     </div>
         </ul>   
 </div>
     <!-- 主体区 -->
+    
     <!-- 底部区域 -->
 </body>
 </html>
