--- a/HTML/changliang.html
+++ b/HTML/changliang.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html >
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -29,24 +29,23 @@
 
     <script type="text/javascript">
     function changeImg(imgNode){
-       
+        //alert(" QAQ太好看了吧");
     document.getElementById("big").src=imgNode.src;
     }
     </script>
 </head>
 <body>
     <div id="bigImg">
-        <img  id ="big" src="./img/w1.jpg" width="600" height="400px">
+        <img  id ="big" src="./img/m3.png" width="600" height="400px">
     </div>
 
     <hr/>
 
     <div id="smallImg">
-     <div><img src="./img/m1.jpg" width="178" height="180" onmouseenter="changeImg(this)"/></div>
-    <div><img src="./img/m2.jpg" width="178" height="180" onmouseenter="changeImg(this)"/></div>
-    <div><img src="./img/m3.jpg" width="178" height="180"onmouseenter="changeImg(this)"/></div>
-    <div><img src="./img/m4.jpg" width="178" height="180"onmouseenter="changeImg(this)"/></div>
-    <div><img src="./img/m5.jpg" width="178" height="180"onmouseenter="changeImg(this)"/></div> 
+     <div><img src="./img/m3.png" width="178" height="180" onmouseenter="changeImg(this)"/></div>
+    <div><img src="./img/m4.png" width="178" height="180" onmouseenter="changeImg(this)"/></div>
+    <div><img src="./img/m5.png" width="178" height="180"onmouseenter="changeImg(this)"/></div>
+    <div><img src="./img/m6.png" width="178" height="180"onmouseenter="changeImg(this)"/></div>
     </div>
 </body>
-</html>
+<html>
