--- a/HTML/webproject2.0.html
+++ b/HTML/webproject2.0.html
@@ -30,7 +30,14 @@
         </ul>   
 </div>
     <!-- 主体区 -->
-    
+    <div class="zhu" >
+<span>最近</span>
+
+    </div>
+    <hr/>
+    <!-- <div>
+        <hr style="transform:rotate(90deg)">
+    </div> -->
     <!-- 底部区域 -->
 </body>
 </html>
